# flightmare

./: .gitignore  README.md
docs/source/advanced_steps/: motion_planning.cpp  motion_planning.hpp
docs/source/first_steps/: envs_and_navigation.rst  quad_and_objects.rst  server_and_client.rst
docs/source/tutorials_general/: camera.cpp  camera.rst  flight_pilot.cpp  racing.cpp
flightlib/: CMakeLists.txt  package.xml  setup.py
flightlib/configs/: custom_quadrotor_env.yaml  target_tracking_env.yaml  tracker_quadrotor_env.yaml  vec_env.yaml
flightlib/flightgym.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flightlib/include/flightlib/bridges/: unity_bridge.hpp  unity_message_types.hpp
flightlib/include/flightlib/common/: command.hpp  custom_command.hpp  integrator_base.hpp  integrator_euler.hpp  integrator_rk4.hpp  quad_state.hpp
flightlib/include/flightlib/controller/: mpc_controller.hpp  velocity_controller.hpp  velocity_controller_vehicle.hpp  velocity_controller_world.hpp
flightlib/include/flightlib/data/: .gitignore  controller_save.hpp  controller_visualization.py  mpc_controller_save.hpp  multi_agent_save.hpp  pid_controller_save.hpp  sensor_save.hpp  sensor_save_v1.hpp  sensor_save_v2.hpp  sensor_visualization.py  sensor_visualization_v1.py  tracking_save.hpp  tracking_save_v1.hpp  tracking_save_v2.hpp  tracking_visualization.py  tracking_visualization_multi.py  tracking_visualization_single copy.py  tracking_visualization_single.py  tracking_visualization_single_multi_sensor.py  tracking_visualization_v1.py  tracking_visualization_v2.py  utils.py
flightlib/include/flightlib/dynamics/: quadrotor_dynamics.hpp
flightlib/include/flightlib/envs/: env_base.hpp  target_tracking_env.hpp  vec_env.hpp
flightlib/include/flightlib/envs/quadrotor_env/: target_quadrotor_env.hpp  tracker_quadrotor_env.hpp
flightlib/include/flightlib/objects/: quadrotor.hpp  static_gate.hpp  static_object.hpp  target_quadrotor.hpp  tracker_quadrotor.hpp  tracker_quadrotor_lv.hpp  tracker_quadrotor_srt.hpp
flightlib/include/flightlib/sensors/: stereo_camera.hpp
flightlib/include/flightlib/tracking_algorithm/: hungarian.hpp  kalman_filter.hpp  kalman_filter_v1.hpp  kalman_filter_v2.hpp  moving_average_filter.hpp
flightlib/include/flightlib/trajectory_planner/: minimum_snap_trajectory.hpp
flightlib/src/bridges/: unity_bridge.cpp
flightlib/src/common/: command.cpp  custom_command.cpp  integrator_base.cpp  integrator_euler.cpp  integrator_rk4.cpp  math.cpp
flightlib/src/controller/: mpc_controller.cpp  velocity_controller.cpp  velocity_controller_vehicle.cpp  velocity_controller_world.cpp
flightlib/src/dynamics/: quadrotor_dynamics.cpp
flightlib/src/envs/: target_tracking_env.cpp
flightlib/src/envs/quadrotor_env/: previous_reward_function.txt  quadrotor_env.cpp  reward.txt  target_quadrotor_env.cpp  tracker_quadrotor_env.cpp
flightlib/src/objects/: quadrotor.cpp  target_quadrotor.cpp  target_quadrotor_LV.cpp  tracker_quadrotor.cpp  tracker_quadrotor_CTBR.cpp  tracker_quadrotor_crbr.cpp  tracker_quadrotor_lv.cpp  tracker_quadrotor_srt.cpp
flightlib/src/sensors/: stereo_camera.cpp
flightlib/src/tracking_algorithm/: hungarian.cpp  kalman_filter.cpp  kalman_filter_v1.cpp  kalman_filter_v2.cpp
flightlib/src/trajectory_planner/: minimum_snap_trajectory.cpp
flightlib/src/wrapper/: pybind_wrapper.cpp
flightlib/tests/bridges/: unity_bridge.cpp
flightlib/tests/common/: logger.cpp
flightlib/tests/envs/: vec_env.cpp
flightlib/tests/envs/quadrotor_env/: quadrotor_env.cpp
flightlib/tests/flightgym/: interface.py
flightrender/: .gitignore
flightrl/: .gitignore  practice.py  reward.py  setup.py  test.py
flightrl/examples/: .gitignore  run_drone_control.py  run_drone_control_ddpg.py  run_target_tracking.py  run_target_tracking_ddpg.py  run_target_tracking_single_agent.py  run_test_multi_agent.py  run_test_single_agent.py  run_tt_independent_multi_agent.py  run_tt_multi_agent.py  run_tt_multi_agent_off_policy.py  run_tt_multi_agent_on_policy.py  run_tt_shared_multi_agent.py  run_tt_single_agent.py  run_tt_single_ppo.py  test_code.py  test_code2.py
flightrl/examples/runs/DDPG/: events.out.tfevents.1688097168.kblee.2570531.0  events.out.tfevents.1688097189.kblee.2570680.0  events.out.tfevents.1688097273.kblee.2570853.0  events.out.tfevents.1688097405.kblee.2571132.0  events.out.tfevents.1688099120.kblee.2573540.0  events.out.tfevents.1688099177.kblee.2573708.0  events.out.tfevents.1688099245.kblee.2573887.0  (+24 more)
flightrl/rpg_baselines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flightrl/rpg_baselines/ddpg/: control_test.py  ddpg.py  ddpg_test.py  target_test.py
flightrl/rpg_baselines/envs/: custom_vec_env_wrapper.py  target_tracking_env_wrapper.py  vec_env_wrapper.py
flightrl/rpg_baselines/multi_agent/: maddpg.py  matd3.py  networks.py  replay_buffer.py  shared_maddpg.py  shared_matd3.py  shared_replay_buffer.py  test.py  test_control.py
flightrl/rpg_baselines/ppo/: ppo2.py  ppo2_test_practice.py  ppo2_test_target.py
flightrl/rpg_baselines/single_agent/: ddpg.py  ppo.py  ppo1.py  td3.py  test.py  test_control.py
flightros/: CMakeLists.txt
flightros/include/flightros/motion_planning/: motion_planning.hpp
flightros/include/flightros/pilot/: flight_pilot.hpp
flightros/include/flightros/test/: planning.hpp
flightros/launch/camera/: camera.launch  camera.rviz
flightros/launch/motion_planning/: motion_planning.launch
flightros/launch/pilot/: rotors_gazebo.launch  rotors_gazebo_test.launch
flightros/launch/racing/: racing.launch
flightros/launch/test/: image_data_generator.launch  image_data_generator.rviz  object_detection.launch  planning.launch  planning.rviz  point_cloud.launch  trajectory.launch
flightros/src/camera/: camera.cpp
flightros/src/motion_planning/: motion_planning.cpp
flightros/src/pilot/: flight_pilot.cpp
flightros/src/racing/: racing.cpp
flightros/src/test/: .gitignore  image_data.py  image_data_generator.cpp  object_detection.cpp  planning.cpp  point_cloud.cpp  trajectory.cpp
(+9 files in other folders)
