<?xml version="1.0"?>
<package format="2">
  <name>flightlib</name>
  <version>0.0.1</version>
  <description>Flightmare: An Open Flexible Quadrotor</description>

  <maintainer email="song@ifi.uzh.ch">Yunlong Song</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>quadrotor_common</depend>
  <depend>nav_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>quadrotor_msgs</depend>
  <depend>polynomial_trajectories</depend>
  <depend>gtest</depend>

</package>